base html completed

--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-index
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <title>Broadway Design</title>
+  </head>
+  <body>
+    <h1 class="header">Broadway Design<h1/>
+    <nav>
+      <a href="#">Home</a> <br/>
+      <a href="#Process">About</a> <br/>
+      <a href="#Portfolio">Work</a> <br/>
+      <a href="#Team">Team</a> <br/>
+      <a href="#Contact">Contact</a>
+    </nav>
+    <div id="Process">
+    <h2> Our Process</h2>
+        <img src="./resourse/Site images/identify.svg"/>
+      <h3>Identify</h3>
+          <p>We focus on the most important details.</p>
+        <img src="./resourse/Site images/understand.svg"/>
+      <h3>Understand</h3>
+          <p>We study our projects inside and out.</p>
+        <img src="./resourse/Site images/execute.svg"/>
+      <h3>Execute</h3>
+          <p>We put everything we have into our work.</p>
+    </div>
+    <a class="Subheadline">Designed in New Yok</a>
+
+    
+
+
+
+
+
+
+  </body>
+</html>
