updated html with copyright

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="#Contact">Contact</a>
     </nav>
     <div id="Process">
-    <h2> Our Process</h2>
+    <h2>Our Process</h2>
         <img src="./resourse/Site images/identify.svg"/>
       <h3>Identify</h3>
           <p>We focus on the most important details.</p>
@@ -26,8 +26,25 @@
           <p>We put everything we have into our work.</p>
     </div>
     <a class="Subheadline">Designed in New Yok</a>
-
+    <div id="Portfolio">
+      <h2>Portfolio</h2>
+          <p>Coming Soon</p>
+    </div>
+    <div id="Team">
+      <h2>Team</h2>
+          <p>We're Hiring!</p>
+    </div>
+    <div id="Contact">
+      <h2>Contact</h2>
+          <p>Phone:(555)555-555 <br>
+            E-mial:test@example.com <br>
+            Twitter: @test
+          </p>
+    </div>
     
+
+
+
 
 
 
