updates to html and css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Broadway Design</title>
   </head>
   <body>
-    <h1 class="header">Broadway Design<h1/>
+    <div class="header">
+    <h1>Broadway Design<h1/>
     <nav>
       <a href="#">Home</a> <br/>
       <a href="#Process">About</a> <br/>
@@ -13,15 +14,16 @@
       <a href="#Team">Team</a> <br/>
       <a href="#Contact">Contact</a>
     </nav>
+   </div>
     <div id="Process">
     <h2>Our Process</h2>
-        <img src="./resourse/Site images/identify.svg"/>
+        <img src="./Resources/Site Images/identify.svg"/>
       <h3>Identify</h3>
           <p>We focus on the most important details.</p>
-        <img src="./resourse/Site images/understand.svg"/>
+        <img src="./Resources/Site Images/understand.svg"/>
       <h3>Understand</h3>
           <p>We study our projects inside and out.</p>
-        <img src="./resourse/Site images/execute.svg"/>
+        <img src="./Resources/Site Images/execute.svg"/>
       <h3>Execute</h3>
           <p>We put everything we have into our work.</p>
     </div>
@@ -38,10 +40,18 @@
       <h2>Contact</h2>
           <p>Phone:(555)555-555 <br>
             E-mial:test@example.com <br>
-            Twitter: @test
+            Twitter:@test
           </p>
     </div>
-    
+    <nav>
+      <p id="footer">&copy; Broadway 2016
+        <a href="#">Home</a>
+        <a href="#Process">About</a>
+        <a href="#Portfolio">Work</a>
+        <a href="#Team">Team</a>
+        <a href="#Contact">Contact</a>
+      </p>
+      </nav>
 
 
 
