updates to html organization and naming

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <body>
     <div class="header">
     <h1>Broadway Design<h1/>
-    <nav>
-      <a href="#">Home</a> <br/>
-      <a href="#Process">About</a> <br/>
-      <a href="#Portfolio">Work</a> <br/>
-      <a href="#Team">Team</a> <br/>
-      <a href="#Contact">Contact</a>
+    <nav id="menu">
+      <a href="#">Home</a><br>
+      <a href="#Process">About</a><br>
+      <a href="#Portfolio">Work</a><br>
+      <a href="#Team">Team</a><br>
+      <a href="#Contact">Contact</a><br>
     </nav>
    </div>
     <div id="Process">
@@ -38,13 +38,14 @@
     </div>
     <div id="Contact">
       <h2>Contact</h2>
-          <p>Phone:(555)555-555 <br>
-            E-mial:test@example.com <br>
+          <p>Phone:(555)555-555 <br> <br>
+            E-mial:test@example.com <br> <br>
             Twitter:@test
           </p>
     </div>
-    <nav>
-      <p id="footer">&copy; Broadway 2016
+    <nav id="footer">
+      <p>
+        <h4>&copy; Broadway 2016</h4>
         <a href="#">Home</a>
         <a href="#Process">About</a>
         <a href="#Portfolio">Work</a>
